--- a/data/sc/preprocess_integrated.ipynb
+++ b/data/sc/preprocess_integrated.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "20d68436",
+   "id": "ea8e0cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "15356bd7",
+   "id": "8ea3e5ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a0097444",
+   "execution_count": 5,
+   "id": "38532545",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_date = '20211227'"
+    "test_date = '20211227'\n",
+    "test_date = '20220227'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7b417724",
+   "execution_count": 6,
+   "id": "118201ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +76,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "404dbdb2",
+   "execution_count": 24,
+   "id": "9f78d40b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cust_no</th>\n",
+       "      <th>date</th>\n",
+       "      <th>mobile_login_90</th>\n",
+       "      <th>dd_my</th>\n",
+       "      <th>dd_md</th>\n",
+       "      <th>onlymd_ind</th>\n",
+       "      <th>onlycc_ind</th>\n",
+       "      <th>efingo_card_ind</th>\n",
+       "      <th>cl_cpa_amt</th>\n",
+       "      <th>fc_ind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [cust_no, date, mobile_login_90, dd_my, dd_md, onlymd_ind, onlycc_ind, efingo_card_ind, cl_cpa_amt, fc_ind]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_subtag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6aaedd42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e4543bc6",
+   "execution_count": 8,
+   "id": "0836e382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7576aea1",
+   "execution_count": 9,
+   "id": "6b59634f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b0cac4f9",
+   "execution_count": 10,
+   "id": "7e80e26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a363d42",
+   "id": "6bb875c7",
    "metadata": {},
    "source": [
     "## get item-subtag"
@@ -129,18 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "135f2adb",
+   "execution_count": 13,
+   "id": "b646d3eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping_df = pd.read_excel('subtag.xlsx', sheet_name = 'mapping')"
+    "mapping_df = pd.read_excel('subtag_map.xlsx', sheet_name = 'mapping')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "47fc952b",
+   "execution_count": 14,
+   "id": "98b321ca",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +255,7 @@
        "2                account     2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c5e08e35",
+   "execution_count": 15,
+   "id": "d214af94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,8 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "abcbbef6",
+   "execution_count": 16,
+   "id": "01a9be25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "204b51a5",
+   "execution_count": 17,
+   "id": "bf5d8f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6e0c23ca",
+   "execution_count": 18,
+   "id": "a80ac585",
    "metadata": {},
    "outputs": [
     {
@@ -267,17 +327,36 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20220226</td>\n",
+       "      <td>account_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>20220226</td>\n",
+       "      <td>mobile_active</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13</td>\n",
+       "      <td>20220226</td>\n",
+       "      <td>forex_digital_account</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [item_id, date, subtag_eng_desc]\n",
-       "Index: []"
+       "   item_id      date        subtag_eng_desc\n",
+       "2       10  20220226           account_only\n",
+       "3       13  20220226          mobile_active\n",
+       "5       13  20220226  forex_digital_account"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,8 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c8555508",
+   "execution_count": 19,
+   "id": "6ae12b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7f2a2bbd",
+   "execution_count": 20,
+   "id": "3d4d5cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,16 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "66035f41",
+   "execution_count": 21,
+   "id": "c2fa434f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "write to file path: <_io.TextIOWrapper name='date=20211227/item_subtag.txt' mode='w' encoding='UTF-8'>\n",
-      "0\n"
+      "write to file path: <_io.TextIOWrapper name='date=20220227/item_subtag.txt' mode='w' encoding='UTF-8'>\n",
+      "11\n"
      ]
     }
    ],
@@ -328,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67d6486",
+   "id": "4fda8dca",
    "metadata": {},
    "source": [
     "### get user-subtag"
@@ -336,8 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "edd83ef4",
+   "execution_count": 22,
+   "id": "d36d737f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9c5f367c",
+   "execution_count": 23,
+   "id": "40246afc",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +488,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ebcc521",
+   "id": "6a60453d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f9f596de",
+   "id": "6f02a95a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5cf2470a",
+   "id": "836f8486",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5452b39e",
+   "id": "47c983d8",
    "metadata": {},
    "source": [
     "### get user-item pairs"
@@ -479,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8377cedb",
+   "id": "c7e09665",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45283ebc",
+   "id": "31ab18a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "385fbdf3",
+   "id": "4eb807d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "e184d97c",
+   "id": "b00260f0",
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68694e3f",
+   "id": "c0246aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90afd82e",
+   "id": "cbbb1140",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1874,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6e0e3a",
+   "id": "34d404a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1882,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22545258",
+   "id": "6c20dca0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1890,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "02a06ce7",
+   "id": "8c480686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285c4510",
+   "id": "f2b82fee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1908,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ab34049a",
+   "id": "692a2e2d",
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "47c1ac34",
+   "id": "582420c2",
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f8ed0f6",
+   "id": "530a7ec4",
    "metadata": {},
    "outputs": [],
    "source": []
